deployment/worker_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
  namespace: demo
spec:
  replicas: 2
  selector:
    matchLabels:
      name: worker
  template:
    metadata:
      labels:
        name: worker
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: worker
          imagePullPolicy: IfNotPresent
          image: elyte5star/worker:v1
