deployment/db_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
  namespace: demo
spec:
  replicas: 1
  selector:
    matchLabels:
      name: db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        name: db
    spec:
      volumes:
        - name: pvc
          persistentVolumeClaim:
            claimName: maria-pvc   
      containers:
        - name: db
          image: mariadb
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: pvc
              mountPath: /var/lib/mysql
---
        
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: demo
spec:
  ports:
  - port: 3306
  selector:
    name: db
  clusterIP: None
