deployment/api_deployment.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  namespace: demo
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-origin: "https://elyte.info"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_set_headers "Request-URI: $request_uri";
    
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - elyte.api.info
      secretName: tls-secret
  rules:
  - host: elyte.api.info
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: api
            port:
              number: 8000

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: demo
spec:
  replicas: 1
  selector:
    matchLabels:
      name: api
  template:
    metadata:
      labels:
        name: api
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: api
          imagePullPolicy: Always
          image: elyte5star/api:v1 
          ports:
            - containerPort: 8000
---
kind: Service
apiVersion: v1
metadata:
  name: api
  namespace: demo
spec:
  selector:
    name: api
  type: NodePort
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
      nodePort: 31317
