deployment/frontend_deployment.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vue-ingress
  namespace: demo
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_set_headers "Request-URI: $request_uri";

spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - elyte.info
      secretName: tls-secret
   
  rules:
  - host: elyte.info
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vuejs
            port:
              number: 8000

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vuejs
  namespace: demo
spec:
  replicas: 1
  selector:
    matchLabels:
      name: vuejs
  template:
    metadata:
      labels:
        name: vuejs
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: vuejs
          imagePullPolicy: IfNotPresent
          image: elyte5star/vuej3:v1 
          ports:
            - containerPort: 8000
  ---
kind: Service
apiVersion: v1
metadata:
  name: vuejs
  namespace: demo
spec:
  selector:
    name: vuejs
  type: NodePort
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
      nodePort: 31319
