deployment/db_network.yml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: db-network-policy
  namespace: demo
spec:
  podSelector:
    matchLabels:
      role: db
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
      - podSelector:
          matchLabels:
            role: backend
      ports:
        - protocol: TCP
          port: 3306
  egress:
    - to:
      - podSelector:
          matchLabels:
            role: backend
      ports:
        - protocol: TCP
          port: 3306
